fix: carousel img width stretch.

--- a/src/App.css
+++ b/src/App.css
@@ -36,4 +36,5 @@
 .img-carousel {
   width: 100%;
   height: 100vh;
+  object-fit: cover;
 }
